# ChangeLog for app-editors/emacs-vcs
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*emacs-vcs-24.0.9999 (22 Sep 2010)

  22 Sep 2010; Ulrich Mueller <ulm@gentoo.org> +emacs-vcs-24.0.9999.ebuild,
  +metadata.xml:
  Copy from portage tree.
