@@ -1,3 +1,3 @@
-EBUILD emacs-vcs-24.0.9999.ebuild 10333 RMD160 0af6154b33c83677a742874d93775bb6add5efe6 SHA1 4df454e09197dbcc92f77c040b489cf817132c5a SHA256 9ead146d8e2df7bb9730a782270f750861a8a33163bb47c3c2fe1af25c64001d
-MISC ChangeLog 278 RMD160 f9eaa05024e94eb3e264d65643239f295a825eb2 SHA1 8f9a4f3bee7dea8adc2f7d45f027685d573d261d SHA256 159cda6121048db5fbf220fda4b340d5bb1b8c1893a61cc9322ed5360856bf7b
+EBUILD emacs-vcs-24.0.9999.ebuild 10239 RMD160 290a9271d4f574eeb8f931648d62316993e54125 SHA1 2ed11b2712c0cd8ea6d9dcb6678c7e38ba6027a0 SHA256 e9b91fc804d80cc8e141e8d5f226471ce42792cf5051ed1488ad32497e5ff425
+MISC ChangeLog 402 RMD160 71695d11f7a993d7acecbe5fe6cb86908a4ded75 SHA1 ea3d1b08a690fdb74d2c6efdc86cbdf31822919b SHA256 42a176473f64e867955ff3fc80fb1b9bbf97f7ffbca93ab030f6edd9f0e8ed72
 MISC metadata.xml 1842 RMD160 57ca3c2d25e695ead4faa6cb01b4d7a03939b511 SHA1 1960513308596b38c3ad7cd248924c903611d39b SHA256 9ebd8972aea68e7b3fd62915725ca35d0678b218d922a467a2c978fe44312ddb
