@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  22 Sep 2010; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-24.0.9999.ebuild:
+  Move regeneration of Info dir to pkg_preinst.
+
 *emacs-vcs-24.0.9999 (22 Sep 2010)
 
   22 Sep 2010; Ulrich Mueller <ulm@gentoo.org> +emacs-vcs-24.0.9999.ebuild,
